[Fix] close the iterator
See https://github.com/tc39/proposal-set-methods/pull/85

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,10 @@
 				"GetIntrinsic",
 				"GetKeysIterator",
 				"GetSetRecord",
+				"IteratorClose",
 				"IteratorStep",
 				"IteratorValue",
+				"NormalCompletion",
 				"ToBoolean",
 
 				// GetSetRecord
