[patch] remove GetKeysIterator and its callable check
See https://github.com/tc39/proposal-set-methods/pull/101

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 				"RequireObjectCoercible",
 				"Call",
 				"GetIntrinsic",
-				"GetKeysIterator",
+				"GetIteratorFromMethod",
 				"GetSetRecord",
 				"IteratorClose",
 				"IteratorStep",
@@ -24,11 +24,6 @@
 				"Get",
 				"ToNumber",
 				"Type",
-				// GetKeysIterator
-				"Type",
-				"Call",
-				"Get",
-				"IsCallable",
 			],
 		}],
 		"object-curly-newline": "off",
