[Refactor] use `es-errors` where possible, so things that only need those do not need `get-intrinsic`

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
 		"call-bind": "^1.0.5",
 		"define-properties": "^1.2.1",
 		"es-abstract": "^1.22.3",
+		"es-errors": "^1.0.0",
 		"es-set": "^1.1.1",
-		"get-intrinsic": "^1.2.2",
 		"is-set": "^2.0.2",
 		"stop-iteration-iterator": "^1.0.0"
 	},
@@ -77,7 +77,6 @@
 		"es-get-iterator": "^1.1.3",
 		"es-map": "^1.0.5",
 		"es-value-fixtures": "^1.4.2",
-		"es6-shim": "^0.35.8",
 		"eslint": "=8.8.0",
 		"evalmd": "^0.0.19",
 		"for-each": "^0.3.3",
