--- a/.eslintrc
+++ b/.eslintrc
@@ -13,8 +13,7 @@
 				"GetIteratorFromMethod",
 				"GetSetRecord",
 				"IteratorClose",
-				"IteratorStep",
-				"IteratorValue",
+				"IteratorStepValue",
 				"NormalCompletion",
 				"SetDataSize",
 				"ToBoolean",
